# console-renderer

./: README.md  font factor test.py  main.py  pyproject.toml  renderer.py  requirements.txt  run.bat  setup.py  setup.sh  test.bat  test.py  textures.py  vectors.py
Microsoft/Windows/PowerShell/: ModuleAnalysisCache
Microsoft/Windows/PowerShell/PSReadLine/: ConsoleHost_history.txt
examples/3d/: data.txt  main.py
examples/3d/termgfx/: __init__.py  vectors.py
examples/3d/termgfx/examples/: basic_demo.py
examples/game1/: run.bat
examples/game2/: main.py  renderer.py
game examples/game1/: main.py  test.py
game examples/game1/rooms/: 0_0.json  0_1.json
game1/: main.py  renderer.py
termgfx/: __console_font__.py  colors.py  console_font.py  renderer.py  test.bat  textures.py  vectors.py
